@@ -509,6 +509,9 @@ fight_speed = 6
 ; Chomper speed (length of the animation cycle in frames). Smaller is faster. (default = 15)
 chomper_speed = 15
 
+; Skip the mouse in the ending scene. (default = false)
+no_mouse_in_ending = false
+
 
 ; The following customization options can be used in all level sections:
 ; level_type = 0: dungeon, 1: palace
