@@ -743,3 +743,6 @@ DONE: If the SDLPOP_SAVE_PATH environment variable is set, put all saves into th
 	Details: https://github.com/NagyD/SDLPoP/issues/301
 FIXED: Added a configurable fix for the turn-run bug that causes trick 1 and trick 2 to work.
 	Details: See FIX_TURN_RUN_NEAR_WALL in config.h and https://github.com/NagyD/SDLPoP/pull/312
+DONE: Added a modding option to skip the mouse in the ending scene.
+	This is used in Christmas of Persia.
+	Details: https://forum.princed.org/viewtopic.php?p=34897#p34897
